# claude-api-wrapper

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/adapters/: base.py  haiku_adapter.py  selector.py  sonnet_adapter.py
app/auth/: oauth.py
app/cost/: tracker.py
app/models/: request.py  response.py
app/observability/: logger.py  middleware.py
app/rate_limit/: rate_limiter.py
app/resilience/: circuit_breaker.py  fallback.py  retry.py
app/security/: input_validator.py  output_validator.py  prompt_guard.py
tests/: test_adapters.py  test_oauth.py  test_rate_limit_and_cost.py  test_resiliency.py  test_security.py
