[project]
name = "claude-api-wrapper"
version = "0.1.0"
description = "Production-hardened FastAPI wrapper around the Anthropic API — auth, resilience, security, cost control"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # LLM
    "anthropic>=0.30.0",
    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth — OAuth2 client credentials flow
    "python-jose[cryptography]>=3.3.0",   # JWT signing/verification
    "bcrypt>=4.3.0,<5",                   # hash client secrets
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.3.0",                    # retry with backoff
    "python-multipart>=0.0.32",
    "bcrypt<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
